@@ -21,6 +21,9 @@ New Options
   respectively. Birds can be set as the preferred pet with "b".
 
 General Changes
+- Looking at monsters now tells you what weapon they are wielding, and whether
+  they are armored. To avoid nerfing wands of probing, the type of armor is not
+  indicated.
 - Deadly poison is no longer an instant kill, and instead does 1-13 extra
   damage. This change does not affect monsters.
 - Monsters are now capable of sacrificing corpses on altars, and all monsters
